<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:padding="10dp">
    <ImageView
        android:id="@+id/notificationMusicArt"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_music_note_24"
        android:background="@drawable/ic_baseline_music_note_24"
        android:contentDescription="@string/image"
        android:layout_centerVertical="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/notificationMusicArt"
        android:layout_toRightOf="@id/notificationMusicArt"
        android:layout_toStartOf="@+id/playPausePar"
        android:layout_toLeftOf="@+id/playPausePar"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp">
        <TextView
            android:id="@+id/notificationMusicName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/music_name"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Title"
            style="@style/TextAppearance.Compat.Notification.Title" />
        <TextView
            android:id="@+id/notificationMusicAlbum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/album_name"
            android:textAppearance="@style/TextAppearance.Compat.Notification.Info"
            style="@style/TextAppearance.Compat.Notification.Info" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/playPausePar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp">

        <ImageButton
            android:id="@+id/notificationPlayPause"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_media_play"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp" />

        <ImageButton
            android:id="@+id/notificationExit"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_menu_close_clear_cancel"/>

    </LinearLayout>
</RelativeLayout>